--- a/index.html
+++ b/index.html
@@ -152,16 +152,21 @@
 
     </div>
   </div> -->
-  <div class="container">
-    <h1 class="texttop">Packages</h1>
-    <div class="row">
-      <div class="col"><img src="/hotelMarkupAssets/hamsterwedding.jpg" style="width:400px;height:200px"class="packages top">
-        <h3 class="top">Beach Wedding package</h3>
-        
-
-
+  <div class="container ">
+    <h1 class="texttop ">Packages</h1>
+    <div class="row ">
+      <div class="weding"></div>
+      <div class="col lineup">
+        <h3 class="lineup">Beach Wedding package</h3>
+        <h6 class="lineup">Starting US $1,500.00</h6>
       </div>
     </div>
+
+
+
+
+  </div>
+  </div>
 
 
 
