--- a/index.html
+++ b/index.html
@@ -140,48 +140,90 @@
   <br>
   <br>
 
-  <!-- <div class="container">
-    <h1 class="texttop">Packages</h1>
-    <div class="row">
-      <div class="col"><img src="/hotelMarkupAssets/hamsterwedding.jpg"style="width:400px;height:200px" class="packages Moveleft">
-      <h3 class="Moveleft">Beach Wedding package</h3>
-      <h6 class="Moveleft">Starting US $1,500.00</h6>
-      </div>
-      
-      <div><h5 class="Packagesyap">Feel the warmth of the beach as the flames in your hearts ignite during our romantic beach side wedding. All wedding packages include catering, an open bar, and one tier wedding cake (9" Vanilla standard cake). A private dinner for your closets family members and friends will be provided after the ceremony.</h5></div>
-
-    </div>
-  </div> -->
   <div class="container ">
     <h1 class="texttop ">Packages</h1>
     <div class="row ">
       <div class="weding"></div>
-      <div class="col lineup">
-        <h3 class="lineup">Beach Wedding package</h3>
-        <h6 class="lineup">Starting US $1,500.00</h6>
+      <div class="col">
+        <h3 class="">Beach Wedding package</h3>
+        <h6 class="">Starting US $1,500.00</h6>
+        <h5 class="Packagesyap">Feel the warmth of the beach as the flames in your hearts ignite during our romantic
+          beach side wedding. All wedding packages include catering, an open bar, and one tier wedding cake (9" Vanilla
+          standard cake). A private dinner for your closets family members and friends will be provided after the
+          ceremony.</h5>
       </div>
     </div>
+    <br>
+    <br>
+    <div class="row ">
+      <div class="crap"></div>
+      <div class="col ">
+        <h3 class="">Full Bloom Package</h3>
+        <h6 class="">Starting US $1,000.00</h6>
+        <h5 class="Packagesyap">Enjoy the shade of our cherry trees as you join us during our spring time celebration.
+          We invite you to our orchards for cherry, strawberry, and apple picking that is open all day. We end each
+          evening with fresh, vegetable centric dinners along with a live show from local musicians.</h5>
+      </div>
+      <br>
+      <br>
+      <div class="row ">
+        <div class="crap"></div>
+        <div class="col ">
+          <h3 class="">Cheese and Seed Tour Package</h3>
+          <h6 class="">Starting US $1,200.00</h6>
+          <h5 class="Packagesyap">Immerse yourself in the flavors of Cavia with our Cheese and Seed tour. We consulted
+            with connoisseurs from around the globe to bring you the best flavors that nature has to offer, and create
+            our cheeses right here at our local creamery. Cheese and seeds are served all day and nightly spa treatment
+            is provided after dinner.</h5>
+        </div>
 
+
+
+      </div>
+    </div>
+    <br>
 
 
 
   </div>
+  <div class="RoomBackground">
+    <h1 class="whiteText texttop">Amenities</h1>
+    <p class="whiteText textCenter">Here at La Petite Maison, we invite you to enjoy our services in hopes that you have
+      the most relaxing stay we can provide.</p>
+    <div class="container Centerpool">
+      <div class="row">
+        <div class="col"><img src="/hotelMarkupAssets/24hour.png" class="logo2"></div>
+        <div class="col"><img src="/hotelMarkupAssets/breakfast.png" class="logo2"></div>
+        <div class="col"><img src="/hotelMarkupAssets/valet.png" class="logo2"></div>
+        <div class="col"><img src="/hotelMarkupAssets/pool.png" class="logo2"></div>
+      </div>
+    </div>
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col Happyhamster"></div>
+      <div class="col ">
+        <div class="col">
+          <h2 class="nometext">Welcome to a hamster's paradise</h2>
+        </div>
+        <div class="col ">
+          <h6 class="">Nestled in the heart of Cavia California, La Petite Maison is a luxury hotel designed for the
+            small mammal with extravagance in mind. Escape to the warm comforts of stunning rooms, a relaxing spa, and a
+            pool with a beach side view. Inspired by the warm beauty of the California Coast, we invite you to enjoy the
+            rich accommodations along with our unmatched luxury. Discover the satisfaction of indulging in our quality
+            rooms, and thank you for choosing La Petite Maison.</h6>
+        </div>
 
 
 
-  </div>
 
 
 
 
 
-
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+          crossorigin="anonymous"></script>
 </body>
 
 </html>
