--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <br>
       <br>
       <div class="row ">
-        <div class="crap"></div>
+        <div class="NiceBro"></div>
         <div class="col ">
           <h3 class="">Cheese and Seed Tour Package</h3>
           <h6 class="">Starting US $1,200.00</h6>
@@ -201,29 +201,42 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col Happyhamster"></div>
-      <div class="col ">
-        <div class="col">
-          <h2 class="nometext">Welcome to a hamster's paradise</h2>
+      <div class="Textboxwow center">
+        <h1 class="whiteText center">Reserve a Room</h1>
+        <div class="row coolrow">
+
+
         </div>
-        <div class="col ">
-          <h6 class="">Nestled in the heart of Cavia California, La Petite Maison is a luxury hotel designed for the
-            small mammal with extravagance in mind. Escape to the warm comforts of stunning rooms, a relaxing spa, and a
-            pool with a beach side view. Inspired by the warm beauty of the California Coast, we invite you to enjoy the
-            rich accommodations along with our unmatched luxury. Discover the satisfaction of indulging in our quality
-            rooms, and thank you for choosing La Petite Maison.</h6>
+        <div class="row">
+
         </div>
 
 
 
 
 
+      </div>
+    </div>
+  </div>
+  <div class="NavyBlue">
+    <img src="/hotelMarkupAssets/Logo.png" class="logo">
+    <h1 class="whiteText texttop">Amenities</h1>
+    <p class="whiteText textCenter">123 Sunflower Seed Rd., Cavia, California 95205</p>
+    <p class="whiteText textCenter">©LA PETITE MAISON HOTELS LIMITED 1939-2018. ALL RIGHTS RESERVED.</p>
+    <div class="container Centerpool">
+    </div>
+  </div>
 
 
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-          crossorigin="anonymous"></script>
+
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
